# playwright-python-example

./: .gitignore  pyproject.toml  readme.md  requirements.txt
data/: account.csv
features/: login.feature
keywords/: account_overview_keywords.py  create_new_account_keywords.py  login_keywords.py  transfer_funds_keywords.py
pages/: account_overview_page.py  create_new_account_page.py  login_page.py  transfer_funds_page.py
steps/: test_login.py
tests/: test_e2e.py  test_workflows.py
utils/: abstract_data_reader.py  csv_data_reader.py  data_dir_content.py  data_table_creator.py
